--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Dinesh Raja weds Monisha</title>
+	<title>Amarnath weds Geerthana</title>
 	<meta name="robots" content="noindex, nofollow" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="Monisha Weds Dinesh Raja" />
+	<meta property="og:title" content="Geerthana Weds Amarnath" />
 	<meta property="og:description" content="vhall.live" />
 	<meta property="og:url" content="" />
 	<meta property="og:image"  content="" />
@@ -88,9 +88,9 @@
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="animate-box svg-sm colored">
-								<h1 class="holder"><span>The Betrothal of</span></h1>
-								<h2>Dinesh Raja &amp; Monisha</h2>
-								<p>12.11.2020</p>
+								<h1 class="holder"><span>The Wedding of</span></h1>
+								<h2>Amarnath &amp; Geerthana</h2>
+								<p>20.11.2020</p>
 							</div>
 						</div>
 					</div>
@@ -113,7 +113,7 @@
 					<div class="couple groom text-center animate-box">
 						<img src="images/mapla.jpg" class="img-responsive"   >
 						<div class="desc">
-							<h2>Dinesh Raja</h2>
+							<h2>Amarnath</h2>
 						</div>
 					</div>
 				</div>
@@ -121,7 +121,7 @@
 					<div class="couple bride text-center animate-box">
 						<img src="images/ponu.jpg" class="img-responsive"   >
 						<div class="desc">
-							<h2>Monisha</h2>
+							<h2>Geerthana</h2>
 						</div>
 					</div>
 				</div>
@@ -145,14 +145,14 @@
 					<!-- <iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay"> -->
 					<!-- </iframe> -->
 					<div class="text-center containers">
-					<iframe class="responsive-iframe" src="https://www.youtube.com/embed/1w8PlYKDvVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
+						<img class="responsive-iframe" src="images/poster.gif" >
 					</div>
 			</div>
 			<p align="center">
-				<a href='https://www.free-counters.org/'>VHALL.live</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=ba0d76f93cbd10ec0b749e3efeab54a7dcab9203'></script>
-				<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/760976/t/0"></script>	</p>
+				<a href='https://www.horando.de/en/'>Classic watches</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=060d70cdcb1b95b47b4370d3683b7f4d0018feb5'></script>
+				<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/766252/t/0"></script>
+
+			</p>
 
 		</div>
 
