--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<meta property="og:url" content="" />
 	<meta property="og:image"  content="" />
 
+	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5fb61bcd24f3d700191fe850&product=inline-reaction-buttons' async='async'></script>
+
 
 	<script type="text/css">
 
