--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
             <iframe class="responsive-iframe" frameborder="0" width="100%" height="100%" src="https://3.6.39.103:80" scrolling="no" allowfullscreen allow="autoplay">
 					</iframe>
 					</div>
+					<!-- ShareThis BEGIN --><div style="padding-top: 10px;" class="sharethis-inline-reaction-buttons"></div><!-- ShareThis END -->
 
 			</div>
+
 			<p align="center">
 				<a href='https://www.horando.de/en/'>Classic watches</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=060d70cdcb1b95b47b4370d3683b7f4d0018feb5'></script>
 				<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/766252/t/0"></script>
