--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             <div class="text-center containers">
                 <img class="responsive-iframe" src="images/poster.gif">
             </div>
-            <!--<div class="text-center containers">
-                <iframe class="responsive-iframe" frameborder="0" width="100%" height="100%" src="https://3.6.39.103:80" scrolling="no" allowfullscreen allow="autoplay">
+            <div class="text-center containers">
+                <iframe class="responsive-iframe" frameborder="0" width="100%" height="100%" src="https://65.0.176.113:80" scrolling="no" allowfullscreen allow="autoplay">
 					</iframe>
-        </div>-->
+        </div>
 
             <!-- ShareThis BEGIN -->
             <div style="padding-top: 10px;" class="sharethis-inline-reaction-buttons"></div>
